invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_70.src
.IPPcode24
NOT GF@e int bool@false